Connected to DB, fixed overflow issues with meeting cards

--- a/frontend/styles/HomePageLayout.module.scss
+++ b/frontend/styles/HomePageLayout.module.scss
@@ -13,4 +13,5 @@
   flex: 1; 
   background-color: #ffffff; 
   padding: 20px;
+  overflow: hidden;
 }
